--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="contains_lowercase_char">Contains lowercase character</string>
     <string name="contains_uppercase_char">Contains uppercase character</string>
     <string name="register">Register</string>
+    <string name="error_user_already_exists">A user with that email already exists.</string>
+    <string name="registration_successful">Registration successful! You can log in now.</string>
+    <string name="youre_logged_in">You\'re logged in.</string>
+    <string name="hi_there">Hi there!</string>
+    <string name="runique_welcome_text">Welcome to your ultimate running companion! Track, analyze and conquer your runs.</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="error_email_password_incorrect">Email and/or password is incorrect. Please try agian.</string>
 </resources>
